--- a/src/css/common.css
+++ b/src/css/common.css
@@ -4,15 +4,18 @@
 
 body {
   margin: 16px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
-    Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #fafafa;
+  background-color: #14abda;
   color: #212121;
   line-height: 1.5;
 }
 
+body.hidden-scroll {
+  background-color: chartreuse;
+}
 input {
   padding: 8px;
   font: inherit;
